got devs functional, learned how to implement in app-html to work with routes and implement a nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-donut></app-donut>
+
+<nav class="navbar bg-body-tertiary">
+<a routerLink="/Donuts">Donuts</a>
+<a routerLink="/Dev">Devs</a>
+</nav>
+<div class="container">
+<router-outlet />
+</div>
